OGM-1353 Infinispan sequence generation is not thread safe